Fix Java 11 deprecation warnings (#6145)
* Suppress warnings for removal of com.sun.javadoc in Java 11

* Fix deprecation warnings from Java 11

* Fix deprecation warnings from Java 11 for tests